Changed Footer. Tried to solve a problem with background images. Fixed a bug with jumping header. Some markup fixes.

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,48 +1,37 @@
 /* HEADER */
 /* HEADER */
 /* HEADER */
-.placeholder {
-  height: 101px;
-  width: 100%;
-  display: none;
-}
-
-.placeholder.showed {
-  display: block;
-}
-
-header.fixed {
-  z-index: 1000;
-  position: sticky;
-  width: 100%;
+.header.fixed {
   z-index: 999;
+  position: fixed;
+  width: 100%;
   background-color: #fff;
   border-bottom: 1px solid #ccc;
   top: -100px;
-  opacity: 0;
+  display: none;
   transition: .5s cubic-bezier(0.39, 0.58, 0.5, 1);
-  ;
 }
 
-header.fixed .container {
+.header.fixed .container {
   padding: 15px 50px;
   box-sizing: border-box;
 }
 
-header.fixed .heading {
+.header.fixed .heading {
   color: #000;
   border-color: #000;
 }
 
-header.fixed p {
+.header.fixed p {
   color: #000;
 }
 
-header.fixed .bar {
+.header.fixed .bar {
   background-color: #000;
 }
 
-header.fixed.showed {
+.header.fixed.showed {
   top: 0;
-  opacity: 1;
+  display: flex;
+  transition: .5s cubic-bezier(0.39, 0.58, 0.5, 1);
 }
