--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -59,12 +59,13 @@ button:hover {
 /* HEADER */
 /* HEADER */
 /* HEADER */
-header {
+header, .header {
     display: flex;
     justify-content: center;
 }
 
-header .container {
+header .container,
+.header .container {
     flex-basis: 100%;
     display: flex;
     justify-content: space-between;
@@ -73,11 +74,13 @@ header .container {
     max-width: 1000px;
 }
 
-header a {
+header a,
+.header a {
     text-decoration: none;
 }
 
-header .heading {
+header .heading,
+.header .heading {
     font-size: 1.25rem;
     font-weight: 700;
     color: #fff;
@@ -89,7 +92,8 @@ header .heading {
     transition: .5s cubic-bezier(0.39, 0.58, 0.5, 1);
 }
 
-header .heading:hover {
+header .heading:hover,
+.header .heading:hover {
     color: #ddd;
     border-color: #ddd;
 }
@@ -97,38 +101,44 @@ header .heading:hover {
 /* NAVBAR */
 /* NAVBAR */
 /* NAVBAR */
-header nav {
+header nav,
+.header nav {
     display: flex;
     justify-content: space-between;
     width: 100px;
 }
 
-header nav:hover {
+header nav:hover,
+.header nav:hover {
     cursor: pointer;
 }
 
-header nav:hover .bar {
+header nav:hover .bar,
+.header nav:hover .bar {
     margin: 5px 0;
 }
 
-header p {
+header p,
+.header p {
     color: #fff;
 }
 
-header .menu-bars {
+header .menu-bars,
+.header .menu-bars {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-header .bar {
+header .bar,
+.header .bar {
     display: block;
     width: 30px;
     height: 3px;
     border-radius: 1px;
     background-color: #fff;
     margin: 3px 0;
-    transition: .2s cubic-bezier(0.39, 0.58, 0.5, 1);
+    transition: .5s cubic-bezier(0.39, 0.58, 0.5, 1);
 }
 
 /* MAIN */
@@ -544,7 +554,7 @@ main .main_text button .fab.fa-apple {
     height: 12px;
     border-radius: 50%;
     background-color: #fff7;
-    transition: .3s cubic-bezier(0.39, 0.58, 0.5, 1);
+    transition: .2s cubic-bezier(0.39, 0.58, 0.5, 1);
 }
 
 /* STATISTICS */
@@ -699,15 +709,11 @@ main .main_text button .fab.fa-apple {
 /* FOOTER */
 /* FOOTER */
 footer {
-    z-index: -1;
-    position: sticky;
-    bottom: 0;
     background-color: #3b3b3b;
-    width: 100%;
-    height: 300px;
-    display: inline-flex;
+    width: calc(100vw - 50px);
+    padding: 25px;
+    display: flex;
     justify-content: center;
-    overflow: hidden;
     transition: .5s cubic-bezier(0.39, 0.58, 0.5, 1);
 }
 
@@ -722,6 +728,11 @@ footer .container {
 footer a {
     text-decoration: none;
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 3rem;
     cursor: pointer;
+}
+
+footer p {
+    font-size: 1.5rem;
+    color: #fff;
 }
