--- a/src/styles/media.css
+++ b/src/styles/media.css
@@ -1,6 +1,6 @@
-/* 1100px */
-/* 1100px */
-/* 1100px */
+/* 1115px */
+/* 1115px */
+/* 1115px */
 @media screen and (max-width: 1115px) {
   main .container {
     flex-direction: column;
@@ -76,7 +76,7 @@
 
   .design .design_container {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 2fr;
+    grid-template-rows: 1fr 1fr 3.5fr;
   }
 
   .design .design_container .item {
@@ -101,6 +101,9 @@
   .design .design_container .img_container {
     grid-column: 1 / 3;
     grid-row: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .page .design .design_container img {
@@ -147,7 +150,9 @@
   main .container {
     padding-top: 0;
   }
-
+  main .main_text {
+    padding: 0;
+  }
   main .main_text h2 {
     font-size: 2.5rem;
     line-height: 2.5rem;
@@ -160,7 +165,7 @@
   }
 
   .page main .main_img img {
-    width: 100%;
+    width: 300px;
     height: 500px;
   }
 
@@ -227,11 +232,32 @@
   }
 
   .design .design_container {
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr) 2fr;
   }
 
   .design .design_container .item {
-    padding: 10px;
+    padding: 0;
+  }
+
+  .design .design_container .item:nth-child(2) {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  .design .design_container .item:nth-child(4) {
+    grid-column: 1;
+    grid-row: 3;
+  }
+
+  .design .design_container .item:nth-child(5) {
+    grid-column: 1;
+    grid-row: 4;
+  }
+
+  .design .design_container .img_container {
+    grid-column: 1;
+    grid-row: 5;
   }
 
   .page .design .design_container img {
@@ -241,7 +267,7 @@
   .page .design .design_container .img_container {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
   }
 
   .replies .content_container .item {
