--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -26,26 +26,30 @@
   border-bottom: 1px solid #ddd;
   padding: 15px 0;
   font-size: 1.125rem;
-  transition: .3s ease-out;
+  transition: .5s cubic-bezier(0.39, 0.58, 0.5, 1);
 }
 
 .side_menu a:hover {
   color: #30bdab;
 }
 
-header nav:hover .menu-bars.active .bar {
+header nav:hover .menu-bars.active .bar,
+.header nav:hover .menu-bars.active .bar {
   margin: 3px 0;
 }
 
-header .menu-bars.active .bar:nth-child(1) {
+header .menu-bars.active .bar:nth-child(1),
+.header .menu-bars.active .bar:nth-child(1) {
   transform: translateY(9px) rotate(45deg);
 }
 
-header .menu-bars.active .bar:nth-child(2) {
+header .menu-bars.active .bar:nth-child(2),
+.header .menu-bars.active .bar:nth-child(2) {
   opacity: 0;
 }
 
-header .menu-bars.active .bar:nth-child(3) {
+header .menu-bars.active .bar:nth-child(3),
+.header .menu-bars.active .bar:nth-child(3) {
   transform: translateY(-9px) rotate(-45deg);
 }
 
@@ -57,7 +61,7 @@ header .menu-bars.active .bar:nth-child(3) {
   transform: translateX(-250px);
 }
 
-header.fixed.active {
+.header.fixed.active {
   transform: translateX(-250px);
 }
 
